updated fee voucher and fine